fixed some spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ width: auto;
     right: -845px;
     text-align: left;
     width: 960px;
-    height: 401px;      
+    height: 408px;      
     border-radius: 0px 22px 0px 22px;
     border: solid 1px black;
 }
@@ -73,7 +73,7 @@ h3 {
     height: 100px
     width: 300px;
     top: 410px;
-    right: -211px;
+    right: -215px;  
         
       }
 
@@ -83,7 +83,7 @@ width: 175px;
 height: 175px;
 background-color: powderblue;
 border-radius: 0px 22px 0px 22px;
-left: -80px;
+left: 0;
 border: solid 1px black;
 padding: 2px 0 0px 8px;
  }
